--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@vorms/core": "^1.1.0",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue-tiny-validate": "^0.2.4"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
